# local-slm-playground

./: .env.example  .gitignore  .last-frontend-tag  README.md  docker-compose.yml
docs/: DEPLOYMENT.md  PLAYGROUND.md  SLM.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: TextToolApp.tsx
frontend/src/data/: azureNotificationEvents.tsx  crm.ts  endpoint.ts  mailer.ts  modelBenchmark.ts  modelProfiles.ts  ollama.ts  queryBuilder.ts  recruiting.ts  supabase.ts  tickets.ts
infra/azure/: main.bicep  main.bicepparam
mailer/: app.py
scripts/: deploy-azure.ps1
showcase/: Dockerfile  index.html  slm.html
supabase/: config.toml  seed.sql
temporal/: Dockerfile  pyproject.toml
temporal/src/: classics.py  config.py  crm_api.py  ops_api.py  run_hello.py  web_api.py  worker.py
temporal/src/activities/: chess_store.py  crm_store.py  greeting.py  notifications.py  recruit_store.py  supabase_core.py  ticket_store.py
temporal/src/static/: crm.html  index.html
temporal/src/workflows/example/: approval_workflow.py  chess_workflow.py  crm_workflow.py  hello_world_workflow.py  recruit_workflow.py  ticket_workflow.py
tests/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/: chess.spec.ts
tests/helpers/: board.ts
tests/integration/: api.spec.ts
tests/unit/: classics.spec.ts
(+52 files in other folders)
