[project]
name = "boilerplate-temporal"
version = "0.0.1"
description = "Temporal worker stub for boilerplate stack"
requires-python = ">=3.11"
dependencies = [
  "temporalio==1.5.0",
  "pydantic==2.7.3",
  "pydantic-settings==2.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
